fix board show specific overflow

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,6 +7,10 @@
   /* margin-left: 0.5%; */
 }
 
+body {
+  overflow: initial;
+}
+
 .navbar {
   margin-bottom: 1%;
   height: 40px;
